@@ -19,7 +19,7 @@
 
 **elasticsearchユーザー**で確認
 ```
-[elasticsearch@48d59e46f51d ~]$ /usr/share/elasticsearch/bin/elasticsearch -V
+$/usr/share/elasticsearch/bin/elasticsearch -V
 OpenJDK 64-Bit Server VM warning: Option UseConcMarkSweepGC was deprecated in version 9.0 and will likely be removed in a future release.
 Version: 7.5.1, Build: default/rpm/3ae9ac9a93c95bd0cdc054951cf95d88e1e18d96/2019-12-16T22:57:37.835892Z, JVM: 13.0.1
 ```
@@ -27,7 +27,7 @@ Version: 7.5.1, Build: default/rpm/3ae9ac9a93c95bd0cdc054951cf95d88e1e18d96/2019
 
 **elasticsearchユーザー**で確認
 ```
-[elasticsearch@48d59e46f51d ~]$ /usr/share/elasticsearch/bin/elasticsearch --help
+$/usr/share/elasticsearch/bin/elasticsearch --help
 OpenJDK 64-Bit Server VM warning: Option UseConcMarkSweepGC was deprecated in version 9.0 and will likely be removed in a future release.
 starts elasticsearch
 
@@ -46,33 +46,49 @@ Option                Description
 
 **elasticsearchユーザー**で確認
 
-**tail -f launch_elasticsearch.log**で書き込まれていることを確認
-
+```
 $/usr/share/elasticsearch/bin/elasticsearch --verbose 1>~/launch_elasticsearch.log 2>&1 &
+[1] 552
+```
+
+tailコマンドで書き込まれていることを確認
+```
 $tail -f launch_elasticsearch.log
+[2020-01-05T01:31:03,105][WARN ][o.e.b.BootstrapChecks    ] [23df2d9237d5] the default discovery settings are unsuitable for production use; at least one of [discovery.seed_hosts, discovery.seed_providers, cluster.initial_master_nodes] must be configured
+[2020-01-05T01:31:03,106][INFO ][o.e.c.c.Coordinator      ] [23df2d9237d5] cluster UUID [2x4llkX4QWWAU-vM0iyxqw]
+[2020-01-05T01:31:03,114][INFO ][o.e.c.c.ClusterBootstrapService] [23df2d9237d5] no discovery configuration found, will perform best-effort cluster bootstrapping after [3s] unless existing master is discovered
+[2020-01-05T01:31:03,170][INFO ][o.e.c.s.MasterService    ] [23df2d9237d5] elected-as-master ([1] nodes joined)[{23df2d9237d5}{d1x4quRpS8aPb52ERsulKw}{bY_pv1kcTq-MWfu-WiSA5A}{127.0.0.1}{127.0.0.1:9300}{dilm}{ml.machine_memory=33426505728, xpack.installed=true, ml.max_open_jobs=20} elect leader, _BECOME_MASTER_TASK_, _FINISH_ELECTION_], term: 2, version: 18, delta: master node changed {previous [], current [{23df2d9237d5}{d1x4quRpS8aPb52ERsulKw}{bY_pv1kcTq-MWfu-WiSA5A}{127.0.0.1}{127.0.0.1:9300}{dilm}{ml.machine_memory=33426505728, xpack.installed=true, ml.max_open_jobs=20}]}
+[2020-01-05T01:31:03,207][INFO ][o.e.c.s.ClusterApplierService] [23df2d9237d5] master node changed {previous [], current [{23df2d9237d5}{d1x4quRpS8aPb52ERsulKw}{bY_pv1kcTq-MWfu-WiSA5A}{127.0.0.1}{127.0.0.1:9300}{dilm}{ml.machine_memory=33426505728, xpack.installed=true, ml.max_open_jobs=20}]}, term: 2, version: 18, reason: Publication{term=2, version=18}
+[2020-01-05T01:31:03,227][INFO ][o.e.h.AbstractHttpServerTransport] [23df2d9237d5] publish_address {127.0.0.1:9200}, bound_addresses {127.0.0.1:9200}
+[2020-01-05T01:31:03,227][INFO ][o.e.n.Node               ] [23df2d9237d5] started
+[2020-01-05T01:31:03,323][INFO ][o.e.l.LicenseService     ] [23df2d9237d5] license [d3d3adc4-5ebc-4e8c-b5cd-c26c1b00ffcb] mode [basic] - valid
+[2020-01-05T01:31:03,324][INFO ][o.e.x.s.s.SecurityStatusChangeListener] [23df2d9237d5] Active license is now [BASIC]; Security is disabled
+[2020-01-05T01:31:03,329][INFO ][o.e.g.GatewayService     ] [23df2d9237d5] recovered [0] indices into cluster_state
+```
 
 **/var/log/elasticsearch/elasticsearch.log**でもログ確認（こっちが本物）
 
 ```
-[elasticsearch@48d59e46f51d ~]$ ll /var/log/elasticsearch/
-total 1204
--rw-rw-r--. 1 elasticsearch elasticsearch   24505  1月  4 03:11 elasticsearch.log
--rw-rw-r--. 1 elasticsearch elasticsearch       0  1月  4 01:45 elasticsearch_audit.json
--rw-rw-r--. 1 elasticsearch elasticsearch       0  1月  4 01:45 elasticsearch_deprecation.json
--rw-rw-r--. 1 elasticsearch elasticsearch       0  1月  4 01:45 elasticsearch_deprecation.log
--rw-rw-r--. 1 elasticsearch elasticsearch       0  1月  4 01:45 elasticsearch_index_indexing_slowlog.json
--rw-rw-r--. 1 elasticsearch elasticsearch       0  1月  4 01:45 elasticsearch_index_indexing_slowlog.log
--rw-rw-r--. 1 elasticsearch elasticsearch       0  1月  4 01:45 elasticsearch_index_search_slowlog.json
--rw-rw-r--. 1 elasticsearch elasticsearch       0  1月  4 01:45 elasticsearch_index_search_slowlog.log
--rw-rw-r--. 1 elasticsearch elasticsearch   40599  1月  4 03:11 elasticsearch_server.json
--rw-rw-r--. 1 elasticsearch elasticsearch    2519  1月  4 03:15 gc.log
--rw-rw-r--. 1 elasticsearch elasticsearch    1453  1月  4 01:43 gc.log.00
--rw-rw-r--. 1 elasticsearch elasticsearch    2330  1月  4 01:43 gc.log.01
--rw-rw-r--. 1 elasticsearch elasticsearch    1453  1月  4 01:44 gc.log.02
--rw-rw-r--. 1 elasticsearch elasticsearch    2330  1月  4 01:44 gc.log.03
--rw-rw-r--. 1 elasticsearch elasticsearch    1454  1月  4 01:45 gc.log.04
--rw-rw-r--. 1 elasticsearch elasticsearch 1137371  1月  4 03:16 gc.log.05
--rw-rw-r--. 1 elasticsearch elasticsearch    1465  1月  4 03:15 gc.log.06
+$ll /var/log/elasticsearch/*
+-rw-rw-r--. 1 elasticsearch elasticsearch  21314  1月  5 01:31 /var/log/elasticsearch/elasticsearch.log
+-rw-rw-r--. 1 elasticsearch elasticsearch      0  1月  5 01:21 /var/log/elasticsearch/elasticsearch_audit.json
+-rw-rw-r--. 1 elasticsearch elasticsearch      0  1月  5 01:21 /var/log/elasticsearch/elasticsearch_deprecation.json
+-rw-rw-r--. 1 elasticsearch elasticsearch      0  1月  5 01:21 /var/log/elasticsearch/elasticsearch_deprecation.log
+-rw-rw-r--. 1 elasticsearch elasticsearch      0  1月  5 01:21 /var/log/elasticsearch/elasticsearch_index_indexing_slowlog.json
+-rw-rw-r--. 1 elasticsearch elasticsearch      0  1月  5 01:21 /var/log/elasticsearch/elasticsearch_index_indexing_slowlog.log
+-rw-rw-r--. 1 elasticsearch elasticsearch      0  1月  5 01:21 /var/log/elasticsearch/elasticsearch_index_search_slowlog.json
+-rw-rw-r--. 1 elasticsearch elasticsearch      0  1月  5 01:21 /var/log/elasticsearch/elasticsearch_index_search_slowlog.log
+-rw-rw-r--. 1 elasticsearch elasticsearch  41027  1月  5 01:31 /var/log/elasticsearch/elasticsearch_server.json
+-rw-rw-r--. 1 elasticsearch elasticsearch 118052  1月  5 01:33 /var/log/elasticsearch/gc.log
+-rw-rw-r--. 1 elasticsearch elasticsearch   1443  1月  5 01:20 /var/log/elasticsearch/gc.log.00
+-rw-rw-r--. 1 elasticsearch elasticsearch   2485  1月  5 01:20 /var/log/elasticsearch/gc.log.01
+-rw-rw-r--. 1 elasticsearch elasticsearch   1454  1月  5 01:20 /var/log/elasticsearch/gc.log.02
+-rw-rw-r--. 1 elasticsearch elasticsearch   2502  1月  5 01:20 /var/log/elasticsearch/gc.log.03
+-rw-rw-r--. 1 elasticsearch elasticsearch   1453  1月  5 01:21 /var/log/elasticsearch/gc.log.04
+-rw-rw-r--. 1 elasticsearch elasticsearch 202454  1月  5 01:28 /var/log/elasticsearch/gc.log.05
+-rw-rw-r--. 1 elasticsearch elasticsearch   1455  1月  5 01:30 /var/log/elasticsearch/gc.log.06
+-rw-rw-r--. 1 elasticsearch elasticsearch   2504  1月  5 01:30 /var/log/elasticsearch/gc.log.07
+-rw-rw-r--. 1 elasticsearch elasticsearch   1453  1月  5 01:30 /var/log/elasticsearch/gc.log.08
 ```
 
 ### 4.プロセス状態の確認
@@ -81,28 +97,36 @@ total 1204
 ログにはかれているプロセスIDとpsコマンドの出力結果に含まれているプロセスIDが一致していればプログラムはうまく動いていそう。
 
 ```
-[elasticsearch@48d59e46f51d ~]$ grep pid launch_elasticsearch.log
-[2020-01-04T01:45:05,672][INFO ][o.e.n.Node               ] [48d59e46f51d] version[7.5.1], pid[333], build[default/rpm/3ae9ac9a93c95bd0cdc054951cf95d88e1e18d96/2019-12-16T22:57:37.835892Z], OS[Linux/3.10.0-1062.el7.x86_64/amd64], JVM[AdoptOpenJDK/OpenJDK 64-Bit Server VM/13.0.1/13.0.1+9]
-[2020-01-04T01:45:05,673][INFO ][o.e.n.Node               ] [48d59e46f51d] JVM arguments [-Des.networkaddress.cache.ttl=60, -Des.networkaddress.cache.negative.ttl=10, -XX:+AlwaysPreTouch, -Xss1m, -Djava.awt.headless=true, -Dfile.encoding=UTF-8, -Djna.nosys=true, -XX:-OmitStackTraceInFastThrow, -Dio.netty.noUnsafe=true, -Dio.netty.noKeySetOptimization=true, -Dio.netty.recycler.maxCapacityPerThread=0, -Dio.netty.allocator.numDirectArenas=0, -Dlog4j.shutdownHookEnabled=false, -Dlog4j2.disable.jmx=true, -Djava.locale.providers=COMPAT, -Xms1g, -Xmx1g, -XX:+UseConcMarkSweepGC, -XX:CMSInitiatingOccupancyFraction=75, -XX:+UseCMSInitiatingOccupancyOnly, -Djava.io.tmpdir=/tmp/elasticsearch-16636342414391443596, -XX:+HeapDumpOnOutOfMemoryError, -XX:HeapDumpPath=/var/lib/elasticsearch, -XX:ErrorFile=/var/log/elasticsearch/hs_err_pid%p.log, -Xlog:gc*,gc+age=trace,safepoint:file=/var/log/elasticsearch/gc.log:utctime,pid,tags:filecount=32,filesize=64m, -XX:MaxDirectMemorySize=536870912, -Des.path.home=/usr/share/elasticsearch, -Des.path.conf=/etc/elasticsearch, -Des.distribution.flavor=default, -Des.distribution.type=rpm, -Des.bundled_jdk=true]
-[kuraine💕48d59e46f51d (土  1月 04 01:59:41) ~]$ps -aux
+$grep -Po 'pid\[([0-9]+)\]' launch_elasticsearch.log
+pid[552]
+
+$ps -aux
 USER       PID %CPU %MEM    VSZ   RSS TTY      STAT START   TIME COMMAND
-kuraine      1  0.0  0.0  15480  3096 pts/0    Ss+  01:42   0:00 /bin/bash
-kuraine     48  0.0  0.0  15612  3324 pts/1    Ss   01:42   0:00 /bin/bash
-elastic+   333  3.8  4.4 9092628 1449788 pts/1 Sl   01:45   0:34 /usr/share/elasticsearch/jdk/bin/java -Des.networkaddress.cache.ttl=60 -Des.networkaddress.cache.negative.ttl=10 -XX:+AlwaysPreTouch -Xss1m -Djava
-elastic+   431  0.0  0.0  70444  4516 pts/1    Sl   01:45   0:00 /usr/share/elasticsearch/modules/x-pack-ml/platform/linux-x86_64/bin/controller
+elastic+     1  0.0  0.0  42688  1560 pts/0    Ss+  01:20   0:00 /usr/sbin/init
+elastic+   221  0.0  0.0  14376  2080 pts/1    Ss   01:21   0:00 /bin/bash
+elastic+   552 10.1  4.0 6897796 1321640 pts/1 Sl   01:30   0:19 /usr/share/elasticsearch/jdk/bin/java -Des.networkaddress.cache.ttl=60 -Des.networkaddress.cache.negative.ttl=10 -XX:+AlwaysPreTouch -Xss1m -Djava
+elastic+   648  0.0  0.0  70444  4516 pts/1    Sl   01:30   0:00 /usr/share/elasticsearch/modules/x-pack-ml/platform/linux-x86_64/bin/controller
+elastic+   704  0.0  0.0  54296  1868 pts/1    R+   01:34   0:00 ps -aux
 ```
 
-
-### 5.ターミナルから起動確認
-
-別ターミナルを開いてcurlコマンドで起動確認
+### 5.待ち受けポート確認
 
 ```
-[kuraine💕48d59e46f51d (土  1月 04 01:45:54) ~]$curl localhost:9200
+$lsof -i:9200
+COMMAND PID          USER   FD   TYPE  DEVICE SIZE/OFF NODE NAME
+java    552 elasticsearch  339u  IPv4 3950994      0t0  TCP localhost:wap-wsp (LISTEN)
+```
+
+### 6.ターミナルから起動確認
+
+curlコマンドで起動確認
+
+```
+$curl localhost:9200
 {
-  "name" : "48d59e46f51d",
+  "name" : "23df2d9237d5",
   "cluster_name" : "elasticsearch",
-  "cluster_uuid" : "le0et1XaT5-E9590dxyC0w",
+  "cluster_uuid" : "2x4llkX4QWWAU-vM0iyxqw",
   "version" : {
     "number" : "7.5.1",
     "build_flavor" : "default",
@@ -116,11 +140,11 @@ elastic+   431  0.0  0.0  70444  4516 pts/1    Sl   01:45   0:00 /usr/share/elas
   },
   "tagline" : "You Know, for Search"
 }
-[kibana@48d59e46f51d kuraine]$ curl http://localhost:9200
+$curl http://localhost:9200
 {
-  "name" : "48d59e46f51d",
+  "name" : "23df2d9237d5",
   "cluster_name" : "elasticsearch",
-  "cluster_uuid" : "le0et1XaT5-E9590dxyC0w",
+  "cluster_uuid" : "2x4llkX4QWWAU-vM0iyxqw",
   "version" : {
     "number" : "7.5.1",
     "build_flavor" : "default",
@@ -136,34 +160,40 @@ elastic+   431  0.0  0.0  70444  4516 pts/1    Sl   01:45   0:00 /usr/share/elas
 }
 ```
 
-
-### 6.elasticseachプロセス停止
+### 7.elasticseachプロセス停止
 
 **kibana**のように**/etc/rc.d/init.d/elasticsearch**コマンドで実行するとunit.service経由となるので、うまくいかない。手動でプロセスkill。
 
+```
+$ps -aux
+USER       PID %CPU %MEM    VSZ   RSS TTY      STAT START   TIME COMMAND
+elastic+     1  0.0  0.0  42688  1560 pts/0    Ss+  01:20   0:00 /usr/sbin/init
+elastic+   221  0.0  0.0  14376  2072 pts/1    Ss   01:21   0:00 /bin/bash
+elastic+   242  5.3  4.0 7898304 1307912 pts/1 Sl   01:21   0:21 /usr/share/elasticsearch/jdk/bin/java -Des.networkaddress.cache.ttl=60 -Des.networkaddress.cache.negative.ttl=10 -XX:+AlwaysPreTouch -Xss1m -Djava
+elastic+   337  0.0  0.0  70444  4512 pts/1    Sl   01:21   0:00 /usr/share/elasticsearch/modules/x-pack-ml/platform/linux-x86_64/bin/controller
+elastic+   418  0.0  0.0  54296  1868 pts/1    R+   01:28   0:00 ps -aux
+$sudo kill 242
+$ps -aux
+USER       PID %CPU %MEM    VSZ   RSS TTY      STAT START   TIME COMMAND
+elastic+     1  0.0  0.0  42688  1560 pts/0    Ss+  01:20   0:00 /usr/sbin/init
+elastic+   221  0.0  0.0  14376  2072 pts/1    Ss   01:21   0:00 /bin/bash
+elastic+   452  0.0  0.0  54296  1872 pts/1    R+   01:28   0:00 ps -aux
+```
+
+ログ
 
 ```
-[elasticsearch@48d59e46f51d ~]$ ps aux
-USER       PID %CPU %MEM    VSZ   RSS TTY      STAT START   TIME COMMAND
-kuraine      1  0.0  0.0  15480  3096 pts/0    Ss+  01:42   0:00 /bin/bash
-elastic+   333  1.4  4.7 9110064 1554780 ?     Sl   01:45   1:22 /usr/share/elasticsearch/jdk/bin/java -Des.networkaddress.cache.ttl=60 -Des.networkaddress.cache.negative.ttl=10 -XX:+AlwaysPreTouch -Xss1m -Djava
-elastic+   431  0.0  0.0  70444  4516 ?        Sl   01:45   0:00 /usr/share/elasticsearch/modules/x-pack-ml/platform/linux-x86_64/bin/controller
-kuraine    515  0.0  0.0  15608  3328 pts/2    Ss   01:45   0:00 /bin/bash
-kuraine   1459  0.0  0.0  58908   888 ?        S    02:09   0:00 dbus-launch --autolaunch=bc74deaa9e044c079ed6fc963d084157 --binary-syntax --close-stderr
-kuraine   1460  0.0  0.0  60084  1120 ?        Ss   02:09   0:00 /usr/bin/dbus-daemon --fork --print-pid 5 --print-address 7 --session
-root      3140  0.0  0.0  89352  2660 pts/2    S    03:13   0:00 su elasticsearch
-elastic+  3142  0.0  0.0  15652  3428 pts/2    S    03:13   0:00 bash
-elastic+  3339  0.0  0.0  54304  1864 pts/2    R+   03:20   0:00 ps aux
-[elasticsearch@48d59e46f51d ~]$ kill 333
-[elasticsearch@48d59e46f51d ~]$ ps aux
-USER       PID %CPU %MEM    VSZ   RSS TTY      STAT START   TIME COMMAND
-kuraine      1  0.0  0.0  15480  3096 pts/0    Ss+  01:42   0:00 /bin/bash
-kuraine    515  0.0  0.0  15608  3328 pts/2    Ss   01:45   0:00 /bin/bash
-kuraine   1459  0.0  0.0  58908   888 ?        S    02:09   0:00 dbus-launch --autolaunch=bc74deaa9e044c079ed6fc963d084157 --binary-syntax --close-stderr
-kuraine   1460  0.0  0.0  60084  1120 ?        Ss   02:09   0:00 /usr/bin/dbus-daemon --fork --print-pid 5 --print-address 7 --session
-root      3140  0.0  0.0  89352  2660 pts/2    S    03:13   0:00 su elasticsearch
-elastic+  3142  0.0  0.0  15652  3428 pts/2    S    03:13   0:00 bash
-elastic+  3353  0.0  0.0  54304  1864 pts/2    R+   03:20   0:00 ps aux
+$tail ~/launch_elasticsearch.log
+[2020-01-05T01:22:05,448][INFO ][o.e.l.LicenseService     ] [23df2d9237d5] license [d3d3adc4-5ebc-4e8c-b5cd-c26c1b00ffcb] mode [basic] - valid
+[2020-01-05T01:22:05,449][INFO ][o.e.x.s.s.SecurityStatusChangeListener] [23df2d9237d5] Active license is now [BASIC]; Security is disabled
+[2020-01-05T01:28:44,141][INFO ][o.e.n.Node               ] [23df2d9237d5] stopping ...
+[2020-01-05T01:28:44,149][INFO ][o.e.x.w.WatcherService   ] [23df2d9237d5] stopping watch service, reason [shutdown initiated]
+[2020-01-05T01:28:44,149][INFO ][o.e.x.w.WatcherLifeCycleService] [23df2d9237d5] watcher has stopped and shutdown
+[2020-01-05T01:28:44,308][INFO ][o.e.x.m.p.l.CppLogMessageHandler] [23df2d9237d5] [controller/337] [Main.cc@150] Ml controller exiting
+[2020-01-05T01:28:44,310][INFO ][o.e.x.m.p.NativeController] [23df2d9237d5] Native controller process has stopped - no new native processes can be started
+[2020-01-05T01:28:44,317][INFO ][o.e.n.Node               ] [23df2d9237d5] stopped
+[2020-01-05T01:28:44,317][INFO ][o.e.n.Node               ] [23df2d9237d5] closing ...
+[2020-01-05T01:28:44,322][INFO ][o.e.n.Node               ] [23df2d9237d5] closed
 ```
 
 ## kibanaサービス
@@ -172,7 +202,7 @@ elastic+  3353  0.0  0.0  54304  1864 pts/2    R+   03:20   0:00 ps aux
 
 **kibanaユーザー**で確認
 ```
-[kibana@48d59e46f51d kuraine]$ /usr/share/kibana/bin/kibana -V
+$/usr/share/kibana/bin/kibana -V
 7.5.1
 ```
 
@@ -183,7 +213,7 @@ elastic+  3353  0.0  0.0  54304  1864 pts/2    R+   03:20   0:00 ps aux
 プラグイン管理等に使うのであろう。
 
 ```
-[kibana@48d59e46f51d kuraine]$ /usr/share/kibana/bin/kibana --help
+$/usr/share/kibana/bin/kibana --help
 
   Usage: bin/kibana [command=serve] [options]
   
@@ -212,93 +242,96 @@ elastic+  3353  0.0  0.0  54304  1864 pts/2    R+   03:20   0:00 ps aux
 
 ```
 
+### 3.kibanaプロセス開始
 
-### 2.kibanaプロセス停止
-
-**kibanaユーザー**で実行
+棲み分け楽にするためにログ。kibanaプロセスが新規作成してくれるので。
 
 ```
-[kibana@48d59e46f51d ~]$ /etc/rc.d/init.d/kibana stop
-kibana stopped.
-
-[kibana@48d59e46f51d ~]$ tail /var/log/kibana/kibana.stdout
-{"type":"log","@timestamp":"2020-01-03T17:53:57Z","tags":["info","plugins-system"],"pid":1265,"message":"Stopping all plugins."}
-{"type":"log","@timestamp":"2020-01-03T17:53:57Z","tags":["info","plugins","data"],"pid":1265,"message":"Stopping plugin"}
-{"type":"log","@timestamp":"2020-01-03T17:53:57Z","tags":["info","plugins","translations"],"pid":1265,"message":"Stopping plugin"}
-{"type":"log","@timestamp":"2020-01-03T17:53:57Z","tags":["info","plugins","spaces"],"pid":1265,"message":"Stopping plugin"}
-{"type":"log","@timestamp":"2020-01-03T17:53:57Z","tags":["info","plugins","features"],"pid":1265,"message":"Stopping plugin"}
-{"type":"log","@timestamp":"2020-01-03T17:53:57Z","tags":["info","plugins","timelion"],"pid":1265,"message":"Stopping plugin"}
-{"type":"log","@timestamp":"2020-01-03T17:53:57Z","tags":["info","plugins","code"],"pid":1265,"message":"Stopping plugin"}
-{"type":"log","@timestamp":"2020-01-03T17:53:57Z","tags":["info","plugins","licensing"],"pid":1265,"message":"Stopping plugin"}
-{"type":"log","@timestamp":"2020-01-03T17:53:57Z","tags":["info","plugins","security"],"pid":1265,"message":"Stopping plugin"}
+$sudo rm -rf /var/log/kibana/kibana.stderr /var/log/kibana/kibana.stdout
 ```
 
-### 2.kibanaプロセス開始
-
-**kibanaユーザー**で実行
+**rootユーザー**で実行
 
 **kibana started**と標準出力に表示されたら次はログ確認
 
 ```
-[kibana@48d59e46f51d ~]$ sudo /etc/rc.d/init.d/kibana start
+$sudo /etc/rc.d/init.d/kibana start
 kibana started
 ```
 
-### 2.起動ログを確認
-
-
-**kibanaユーザー**でなくてもよい
+### 4.起動ログを確認
 
 ログは以下で確認できる。標準エラー出力のログファイルに何も出ていなければOK。
 
 ```
 $ll /var/log/kibana/*
--rw-r--r--. 1 root root       0  1月  4 02:03 /var/log/kibana/kibana.stderr
--rw-r--r--. 1 root root 1270327  1月  4 02:31 /var/log/kibana/kibana.stdout
+-rw-r--r--. 1 root root     0  1月  5 01:41 /var/log/kibana/kibana.stderr
+-rw-r--r--. 1 root root 24345  1月  5 01:42 /var/log/kibana/kibana.stdout
 ```
 
-### 3.プロセス状態の確認
+こういうのは
+```
+$cat /var/log/kibana/kibana.stderr
 
-**kibanaユーザー**でなくてもよい
+ FATAL  Error: listen EADDRNOTAVAIL: address not available 172.17.0.3:5601
+
+```
+
+**server.host: 172.17.0.2**ここの値をコンテナマシンのIPと同じか確認
+
+```
+$sudo vi /etc/kibana/kibana.yml
+$head -n10 /etc/kibana/kibana.yml
+# Kibana is served by a back end server. This setting specifies the port to use.
+server.port: 5601
+
+# Specifies the address to which the Kibana server will bind. IP addresses and host names are both valid values.
+# The default is 'localhost', which usually means remote machines will not be able to connect.
+# To allow connections from remote users, set this parameter to a non-loopback address.
+server.host: "172.17.0.2"
+
+# Enables you to specify a path to mount Kibana at if you are running behind a proxy.
+# Use the `server.rewriteBasePath` setting to tell Kibana if it should remove the basePath
+
+```
+
+
+うまくいっているときのログ
+
+```
+$tail /var/log/kibana/kibana.stdout
+{"type":"log","@timestamp":"2020-01-04T16:42:02Z","tags":["status","plugin:cross_cluster_replication@7.5.1","info"],"pid":1012,"state":"green","message":"Status changed from yellow to green - Ready","prevState":"yellow","prevMsg":"Waiting for Elasticsearch"}
+{"type":"log","@timestamp":"2020-01-04T16:42:02Z","tags":["status","plugin:file_upload@7.5.1","info"],"pid":1012,"state":"green","message":"Status changed from yellow to green - Ready","prevState":"yellow","prevMsg":"Waiting for Elasticsearch"}
+{"type":"log","@timestamp":"2020-01-04T16:42:02Z","tags":["status","plugin:snapshot_restore@7.5.1","info"],"pid":1012,"state":"green","message":"Status changed from yellow to green - Ready","prevState":"yellow","prevMsg":"Waiting for Elasticsearch"}
+{"type":"log","@timestamp":"2020-01-04T16:42:02Z","tags":["info","monitoring","kibana-monitoring"],"pid":1012,"message":"Starting monitoring stats collection"}
+{"type":"log","@timestamp":"2020-01-04T16:42:02Z","tags":["status","plugin:maps@7.5.1","info"],"pid":1012,"state":"green","message":"Status changed from yellow to green - Ready","prevState":"yellow","prevMsg":"Waiting for Elasticsearch"}
+{"type":"log","@timestamp":"2020-01-04T16:42:02Z","tags":["status","plugin:spaces@7.5.1","info"],"pid":1012,"state":"green","message":"Status changed from yellow to green - Ready","prevState":"yellow","prevMsg":"Waiting for Elasticsearch"}
+{"type":"log","@timestamp":"2020-01-04T16:42:03Z","tags":["reporting","warning"],"pid":1012,"message":"Generating a random key for xpack.reporting.encryptionKey. To prevent pending reports from failing on restart, please set xpack.reporting.encryptionKey in kibana.yml"}
+{"type":"log","@timestamp":"2020-01-04T16:42:03Z","tags":["status","plugin:reporting@7.5.1","info"],"pid":1012,"state":"green","message":"Status changed from uninitialized to green - Ready","prevState":"uninitialized","prevMsg":"uninitialized"}
+{"type":"log","@timestamp":"2020-01-04T16:42:03Z","tags":["listening","info"],"pid":1012,"message":"Server running at http://172.17.0.2:5601"}
+{"type":"log","@timestamp":"2020-01-04T16:42:03Z","tags":["info","http","server","Kibana"],"pid":1012,"message":"http server running at http://172.17.0.2:5601"}
+```
+
+### 5.プロセス状態の確認
+
 ログにはかれているプロセスIDとpsコマンドの出力結果に含まれているプロセスIDが一致していればプログラムはうまく動いていそう。
 
-
 ```
-[kibana@48d59e46f51d ~]$ tail /var/log/kibana/kibana.stdout 
-{"type":"log","@timestamp":"2020-01-03T17:57:16Z","tags":["status","plugin:cross_cluster_replication@7.5.1","info"],"pid":2907,"state":"green","message":"Status changed from yellow to green - Ready","prevState":"yellow","prevMsg":"Waiting for Elasticsearch"}
-{"type":"log","@timestamp":"2020-01-03T17:57:16Z","tags":["status","plugin:file_upload@7.5.1","info"],"pid":2907,"state":"green","message":"Status changed from yellow to green - Ready","prevState":"yellow","prevMsg":"Waiting for Elasticsearch"}
-{"type":"log","@timestamp":"2020-01-03T17:57:16Z","tags":["status","plugin:snapshot_restore@7.5.1","info"],"pid":2907,"state":"green","message":"Status changed from yellow to green - Ready","prevState":"yellow","prevMsg":"Waiting for Elasticsearch"}
-{"type":"log","@timestamp":"2020-01-03T17:57:16Z","tags":["info","monitoring","kibana-monitoring"],"pid":2907,"message":"Starting monitoring stats collection"}
-{"type":"log","@timestamp":"2020-01-03T17:57:16Z","tags":["status","plugin:maps@7.5.1","info"],"pid":2907,"state":"green","message":"Status changed from yellow to green - Ready","prevState":"yellow","prevMsg":"Waiting for Elasticsearch"}
-{"type":"log","@timestamp":"2020-01-03T17:57:16Z","tags":["status","plugin:spaces@7.5.1","info"],"pid":2907,"state":"green","message":"Status changed from yellow to green - Ready","prevState":"yellow","prevMsg":"Waiting for Elasticsearch"}
-{"type":"log","@timestamp":"2020-01-03T17:57:16Z","tags":["reporting","warning"],"pid":2907,"message":"Generating a random key for xpack.reporting.encryptionKey. To prevent pending reports from failing on restart, please set xpack.reporting.encryptionKey in kibana.yml"}
-{"type":"log","@timestamp":"2020-01-03T17:57:16Z","tags":["status","plugin:reporting@7.5.1","info"],"pid":2907,"state":"green","message":"Status changed from uninitialized to green - Ready","prevState":"uninitialized","prevMsg":"uninitialized"}
-{"type":"log","@timestamp":"2020-01-03T17:57:16Z","tags":["listening","info"],"pid":2907,"message":"Server running at http://172.17.0.2:5601"}
-{"type":"log","@timestamp":"2020-01-03T17:57:16Z","tags":["info","http","server","Kibana"],"pid":2907,"message":"http server running at http://172.17.0.2:5601"}
-
-[kibana@48d59e46f51d ~]$ ps aux
+$grep -Po '"pid":([0-9]+)' /var/log/kibana/kibana.stdout | tail -n1
+"pid":1012
+$ps aux
 USER       PID %CPU %MEM    VSZ   RSS TTY      STAT START   TIME COMMAND
-kuraine      1  0.0  0.0  15480  3096 pts/0    Ss+  01:42   0:00 /bin/bash
-kuraine     48  0.0  0.0  15612  3324 pts/1    Ss   01:42   0:00 /bin/bash
-elastic+   333  1.7  4.7 9110064 1553800 pts/1 Sl   01:45   1:17 /usr/share/elasticsearch/jdk/bin/java -Des.networkaddress.cache.ttl=60 -Des.networkaddress.cache.negative.ttl=10 -XX:+AlwaysPreTouch -Xss1m -Djava
-elastic+   431  0.0  0.0  70444  4516 pts/1    Sl   01:45   0:00 /usr/share/elasticsearch/modules/x-pack-ml/platform/linux-x86_64/bin/controller
-kuraine    515  0.0  0.0  15608  3312 pts/2    Ss   01:45   0:00 /bin/bash
-root      1089  0.0  0.0  89352  2656 pts/1    S    01:57   0:00 su kibana
-kibana    1091  0.0  0.0  15548  3276 pts/1    S    01:57   0:00 bash
-kuraine   1331  0.0  0.0  15608  3308 pts/3    Ss+  02:09   0:00 /bin/bash
-kuraine   1459  0.0  0.0  58908   888 pts/3    S    02:09   0:00 dbus-launch --autolaunch=bc74deaa9e044c079ed6fc963d084157 --binary-syntax --close-stderr
-kuraine   1460  0.0  0.0  60084  1120 ?        Ss   02:09   0:00 /usr/bin/dbus-daemon --fork --print-pid 5 --print-address 7 --session
-kuraine   1843  0.0  0.0  14240  1588 pts/3    S    02:13   0:00 /bin/sh /home/kuraine/idea-IC-192.7142.36/bin/idea.sh
-kuraine   1959  6.8  3.6 8153592 1178456 pts/3 Sl   02:13   3:02 /home/kuraine/idea-IC-192.7142.36/jbr/bin/java -classpath /home/kuraine/idea-IC-192.7142.36/lib/bootstrap.jar:/home/kuraine/idea-IC-192.7142.36/li
-kuraine   2021  0.0  0.0   4620   824 pts/3    S    02:13   0:00 /home/kuraine/idea-IC-192.7142.36/bin/fsnotifier64
-kuraine   2128  0.0  0.0  15688  3500 pts/4    Ss+  02:14   0:00 /bin/bash --rcfile /home/kuraine/idea-IC-192.7142.36/plugins/terminal/jediterm-bash.in -i
-root      2813  0.0  0.0  89352  2660 pts/2    S    02:47   0:00 su kibana
-kibana    2815  0.0  0.0  15548  3264 pts/2    S+   02:47   0:00 bash
-kibana    2907 23.4  1.3 1813572 436104 pts/1  Sl   02:57   0:08 /usr/share/kibana/bin/../node/bin/node /usr/share/kibana/bin/../src/cli -c /etc/kibana/kibana.yml
-kibana    2960  0.0  0.0  54304  1868 pts/1    R+   02:57   0:00 ps aux
+elastic+     1  0.0  0.0  42688  1556 pts/0    Ss+  01:20   0:00 /usr/sbin/init
+elastic+   552  3.8  4.1 9071040 1370988 ?     Sl   01:30   0:34 /usr/share/elasticsearch/jdk/bin/java -Des.networkaddress.cache.ttl=60 -Des.networkaddress.cache.negative.ttl=10 -XX:+AlwaysPreTouch -Xss1m -Djava
+elastic+   648  0.0  0.0  70444  4516 ?        Sl   01:30   0:00 /usr/share/elasticsearch/modules/x-pack-ml/platform/linux-x86_64/bin/controller
+elastic+   712  0.0  0.0  14376  2044 pts/2    Ss   01:35   0:00 /bin/bash
+root       734  0.0  0.0  87256  2492 pts/2    S    01:35   0:00 su kibana
+kibana     735  0.0  0.0  14376  2084 pts/2    S    01:35   0:00 bash
+kibana    1012  9.9  1.0 1713012 341960 pts/2  Sl   01:41   0:22 /usr/share/kibana/bin/../node/bin/node /usr/share/kibana/bin/../src/cli -c /etc/kibana/kibana.yml
+kibana    1141  0.0  0.0  54296  1872 pts/2    R+   01:45   0:00 ps aux
 ```
 
-### 4.ブラウザから確認
+### 6.ブラウザから確認
 
 以下のurlでアクセス
 
@@ -306,44 +339,54 @@ kibana    2960  0.0  0.0  54304  1868 pts/1    R+   02:57   0:00 ps aux
 http://192.168.1.109:5601
 ```
 
-### 4.kibanaプロセス停止
+### 7.kibanaプロセス停止
 
 **kibanaユーザー**で実行
 
-**kibana stoped**と標準出力に表示されたら次はログ確認
+**kibana stop failed; still running.** といいつつもプロセスはkillされているので。OK。
 
 ```
-[kibana@48d59e46f51d ~]$ /etc/rc.d/init.d/kibana stoped
-kibana stoped
+$/etc/rc.d/init.d/kibana stop
+kibana stop failed; still running.
 ```
 
-```
-[kibana@48d59e46f51d ~]$ tail /var/log/kibana/kibana.stdout 
-{"type":"response","@timestamp":"2020-01-03T18:03:19Z","tags":[],"pid":2907,"method":"get","statusCode":200,"req":{"url":"/ui/fonts/inter_ui/Inter-UI-Bold.woff2","method":"get","headers":{"host":"192.168.1.109:5601","connection":"keep-alive","origin":"http://192.168.1.109:5601","user-agent":"Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/77.0.3865.120 Safari/537.36","accept":"*/*","referer":"http://192.168.1.109:5601/app/kibana","accept-encoding":"gzip, deflate","accept-language":"ja,en-US;q=0.9,en;q=0.8"},"remoteAddress":"192.168.1.109","userAgent":"192.168.1.109","referer":"http://192.168.1.109:5601/app/kibana"},"res":{"statusCode":200,"responseTime":3,"contentLength":9},"message":"GET /ui/fonts/inter_ui/Inter-UI-Bold.woff2 200 3ms - 9.0B"}
-{"type":"log","@timestamp":"2020-01-03T18:04:09Z","tags":["info","plugins-system"],"pid":2907,"message":"Stopping all plugins."}
-{"type":"log","@timestamp":"2020-01-03T18:04:09Z","tags":["info","plugins","data"],"pid":2907,"message":"Stopping plugin"}
-{"type":"log","@timestamp":"2020-01-03T18:04:09Z","tags":["info","plugins","translations"],"pid":2907,"message":"Stopping plugin"}
-{"type":"log","@timestamp":"2020-01-03T18:04:09Z","tags":["info","plugins","spaces"],"pid":2907,"message":"Stopping plugin"}
-{"type":"log","@timestamp":"2020-01-03T18:04:09Z","tags":["info","plugins","features"],"pid":2907,"message":"Stopping plugin"}
-{"type":"log","@timestamp":"2020-01-03T18:04:09Z","tags":["info","plugins","timelion"],"pid":2907,"message":"Stopping plugin"}
-{"type":"log","@timestamp":"2020-01-03T18:04:09Z","tags":["info","plugins","code"],"pid":2907,"message":"Stopping plugin"}
-{"type":"log","@timestamp":"2020-01-03T18:04:09Z","tags":["info","plugins","licensing"],"pid":2907,"message":"Stopping plugin"}
-{"type":"log","@timestamp":"2020-01-03T18:04:09Z","tags":["info","plugins","security"],"pid":2907,"message":"Stopping plugin"}
-```
-
-停止したらログは削除しておく。棲み分け楽にするため。
-ログは新規作成してくれるので。
+ログ
 
 ```
-[kibana@48d59e46f51d ~]$ sudo rm -rf /var/log/kibana/kibana.stderr /var/log/kibana/kibana.stdout
+$tail /var/log/kibana/kibana.stdout 
+{"type":"response","@timestamp":"2020-01-04T16:47:46Z","tags":[],"pid":1012,"method":"post","statusCode":200,"req":{"url":"/api/telemetry/report","method":"post","headers":{"host":"192.168.1.109:5601","connection":"keep-alive","content-length":"464","kbn-system-api":"true","origin":"http://192.168.1.109:5601","kbn-version":"7.5.1","user-agent":"Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/77.0.3865.120 Safari/537.36","content-type":"application/json","accept":"*/*","referer":"http://192.168.1.109:5601/app/kibana","accept-encoding":"gzip, deflate","accept-language":"ja,en-US;q=0.9,en;q=0.8"},"remoteAddress":"192.168.1.109","userAgent":"192.168.1.109","referer":"http://192.168.1.109:5601/app/kibana"},"res":{"statusCode":200,"responseTime":796,"contentLength":9},"message":"POST /api/telemetry/report 200 796ms - 9.0B"}
+{"type":"log","@timestamp":"2020-01-04T16:48:47Z","tags":["info","plugins-system"],"pid":1012,"message":"Stopping all plugins."}
+{"type":"log","@timestamp":"2020-01-04T16:48:47Z","tags":["info","plugins","data"],"pid":1012,"message":"Stopping plugin"}
+{"type":"log","@timestamp":"2020-01-04T16:48:47Z","tags":["info","plugins","translations"],"pid":1012,"message":"Stopping plugin"}
+{"type":"log","@timestamp":"2020-01-04T16:48:47Z","tags":["info","plugins","spaces"],"pid":1012,"message":"Stopping plugin"}
+{"type":"log","@timestamp":"2020-01-04T16:48:47Z","tags":["info","plugins","features"],"pid":1012,"message":"Stopping plugin"}
+{"type":"log","@timestamp":"2020-01-04T16:48:47Z","tags":["info","plugins","timelion"],"pid":1012,"message":"Stopping plugin"}
+{"type":"log","@timestamp":"2020-01-04T16:48:47Z","tags":["info","plugins","code"],"pid":1012,"message":"Stopping plugin"}
+{"type":"log","@timestamp":"2020-01-04T16:48:47Z","tags":["info","plugins","licensing"],"pid":1012,"message":"Stopping plugin"}
+{"type":"log","@timestamp":"2020-01-04T16:48:47Z","tags":["info","plugins","security"],"pid":1012,"message":"Stopping plugin"}
 ```
+
+プロセス
+
+```
+$ps aux
+USER       PID %CPU %MEM    VSZ   RSS TTY      STAT START   TIME COMMAND
+elastic+     1  0.0  0.0  42688  1556 pts/0    Ss+  01:20   0:00 /usr/sbin/init
+elastic+   552  3.6  4.2 9078200 1388848 ?     Sl   01:30   0:41 /usr/share/elasticsearch/jdk/bin/java -Des.networkaddress.cache.ttl=60 -Des.networkaddress.cache.negative.ttl=10 -XX:+AlwaysPreTouch -Xss1m -Djava
+elastic+   648  0.0  0.0  70444  4516 ?        Sl   01:30   0:00 /usr/share/elasticsearch/modules/x-pack-ml/platform/linux-x86_64/bin/controller
+elastic+   712  0.0  0.0  14376  2044 pts/2    Ss   01:35   0:00 /bin/bash
+root       734  0.0  0.0  87256  2492 pts/2    S    01:35   0:00 su kibana
+kibana     735  0.0  0.0  14376  2084 pts/2    S    01:35   0:00 bash
+kibana    1180  0.0  0.0  54296  1876 pts/2    R+   01:49   0:00 ps aux
+```
+
 
 # 参考文献
-https://www.nodebeginner.org/index-jp.html
-https://github.com/nodesource/distributions/blob/master/README.md
+https://www.nodebeginner.org/index-jp.html</br>
+https://github.com/nodesource/distributions/blob/master/README.md</br>
 
 nodeのパッケージ管理にはyarnとnpmの2つがある
-https://qiita.com/jigengineer/items/c75ca9b8f0e9ce462e99
+https://qiita.com/jigengineer/items/c75ca9b8f0e9ce462e99</br>
 
 # dockerイメージ作成
 ```
